--- a/src/index.scss
+++ b/src/index.scss
@@ -1,62 +1,60 @@
 :root {
   font: 16px / 1 sans-serif;
 }
-​ html {
+html {
   height: 100%;
 }
-​ body {
+body {
   margin: 0;
   min-height: 100%;
 }
-​ main {
+main {
   padding: 1rem;
   margin: auto;
   max-width: 960px;
-  display: flex;
-  flex-wrap: wrap;
 }
-​ header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
   border-bottom: 1px solid lightgrey;
 }
-​ header img {
+header img {
   width: 2rem;
 }
-​ header ul {
+header ul {
   margin: 0;
   padding: 0;
   list-style: none;
   display: flex;
   align-items: center;
 }
-​ header li {
+header li {
   margin-right: 1rem;
 }
-​ header a:link,
+header a:link,
 header a:visited {
   text-decoration: none;
   color: black;
   font-size: 0.8rem;
 }
-​ main {
+main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
 }
-​ article figure {
+article figure {
   margin: 0;
 }
-​ article figure img {
+article figure img {
   border: 1px solid lightgray;
   border-radius: 2%;
   display: block;
   width: 100%;
   height: auto;
 }
-​ article ul {
+article ul {
   margin: 0.5rem 0 0;
   padding: 0;
   display: flex;
@@ -64,22 +62,22 @@ header a:visited {
   justify-content: space-between;
   align-items: center;
 }
-​ article ul img {
+article ul img {
   border-radius: 50%;
 }
-​ article a:link,
+article a:link,
 article a:visited {
   text-decoration: none;
   color: black;
 }
-​ header {
+header {
   position: sticky;
   top: 0;
   z-index: 1;
   background: white;
   opacity: 0.9;
 }
-​ footer {
+footer {
   border-top: 1px solid lightgrey;
   margin: 2rem;
 }
